# rust-rest-api

./: .env  Cargo.toml  README.md
migrations/2020-12-14-221134_create_people/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
